# HUKsvoc

./: .env  .gitignore  doc.ipynb  pyproject.toml  requirements _runtime.txt  requirements.txt
config/: dev.yaml  dev2.yaml
script/: code.py  training.py
svoc/: constants.py  datapreparation.py  rl.py  settings.py  utils.py
svoc/automatic/: enums.py  features.py  match.py  models.py
svoc/supervised/: enums.py  match.py
